GitVersion1/objects/Project_Group__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Groups</relationshipLabel>
        <relationshipName>Project_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Email__c</fullName>
        <formula>Assigned_To__r.Email</formula>
        <label>Assigned To : Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_FirstName__c</fullName>
        <formula>Assigned_To__r.FirstName</formula>
        <label>Assigned To : FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_LastName__c</fullName>
        <formula>Assigned_To__r.LastName</formula>
        <label>Assigned To : LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attn_Project_Group_Name__c</fullName>
        <formula>&quot;Attn :&quot;&amp;&quot;&quot;&amp; Name</formula>
        <label>Attn : Project Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCOrderId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>BIG ORDER NUMBER</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BC_Customer_Group__c</fullName>
        <description>Created for marketing users</description>
        <label>CFR EXPERIENCE GROUP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Order_Product_ID__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>BC Order Product ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Base_Handling_Cost__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>Base Handling Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Shipping_Cost__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>Base Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Name__c</fullName>
        <label>Budget Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Designate_Payment_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CFR Bus Bldr</fullName>
                    <label>Business Builder</label>
                </value>
                <value>
                    <fullName>CFR BX Reg SPN</fullName>
                    <label>BX Regional Sponsorship</label>
                </value>
                <value>
                    <fullName>CFR BX Reg TS</fullName>
                    <label>BX Regional Tradeshow</label>
                </value>
                <value>
                    <fullName>CFR Int BX</fullName>
                    <label>Cargill Budget- Internal Use ONLY- BX</label>
                </value>
                <value>
                    <fullName>CFR Int SY</fullName>
                    <label>Cargill Budget- Internal USE ONLY- SY</label>
                </value>
                <value>
                    <fullName>CFR GEM</fullName>
                    <label>GEM</label>
                </value>
                <value>
                    <fullName>CFR Ntl SPN</fullName>
                    <label>National Sponsorship</label>
                </value>
                <value>
                    <fullName>CFR Ntl TS</fullName>
                    <label>National Tradeshow</label>
                </value>
                <value>
                    <fullName>CFR Orscheln</fullName>
                    <label>Orscheln Marketing Fund</label>
                </value>
                <value>
                    <fullName>CFR Rural King</fullName>
                    <label>Rural King Marketing Fund</label>
                </value>
                <value>
                    <fullName>CFR Show</fullName>
                    <label>Show</label>
                </value>
                <value>
                    <fullName>CFR SY Chan SPN</fullName>
                    <label>SY Channel Sponsorship</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <label>Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner_Email_Id__c</fullName>
        <label>Campaign Owner Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Project Groups</relationshipLabel>
        <relationshipName>Project_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_type__c</fullName>
        <formula>TEXT(Campaign__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargill_Customer_Contact__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available</inlineHelpText>
        <label>Cargill Customer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargill_Customer_Number__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available</inlineHelpText>
        <label>Cargill Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Email_Adress__c</fullName>
        <label>Consultant Email Adress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Requesting__c</fullName>
        <description>Identifies when a Sales Consultant is creating an Order on behalf of a Customer from the Billme Code in BC</description>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.” Identifies when a Sales Consultant is creating an Order on behalf of a Customer from the Bill me Code in BC.</inlineHelpText>
        <label>Consultant Requesting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon_Discount__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>Coupon Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_MemoPL__c</fullName>
        <label>Credit Memo Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>22997160</fullName>
                    <default>true</default>
                    <label>22997160</label>
                </value>
                <value>
                    <fullName>22997161</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Memo_Date__c</fullName>
        <label>Credit Memo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Memo__c</fullName>
        <description>Credit Memo # (22997160)</description>
        <label>Credit Memo #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This Contact could be a Customer Contact or a Cargill Sales Consultant making an Order</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Groups</relationshipLabel>
        <relationshipName>Project_GroupsCC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Message__c</fullName>
        <label>Customer Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Owner__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Account__r.Owner.Id, Account__r.Owner.FirstName+&apos; &apos;+Account__r.Owner.LastName)</formula>
        <label>Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Number of Days a Project Group has been open based on kick off date</description>
        <inlineHelpText>Number of Days a Project Group has been open</inlineHelpText>
        <label>Project Group Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_MemoPL__c</fullName>
        <label>Debit Memo Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>64010113</fullName>
                    <default>true</default>
                    <label>64010113</label>
                </value>
                <value>
                    <fullName>640101127</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debit_Memo__c</fullName>
        <description>Debit Memo # (64010113)</description>
        <label>Debit Memo#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designate_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>PurchaseOrder</fullName>
                    <label>Purchase Order</label>
                </value>
                <value>
                    <fullName>BudgetAccount</fullName>
                    <label>Budget Account</label>
                </value>
                <value>
                    <fullName>Bill Cargill (Consultant Use Only)</fullName>
                    <isActive>false</isActive>
                    <label>Bill Cargill (Consultant Use Only)</label>
                </value>
                <value>
                    <fullName>Business Builder</fullName>
                    <isActive>false</isActive>
                    <label>Business Builder</label>
                </value>
                <value>
                    <fullName>GEM</fullName>
                    <isActive>false</isActive>
                    <label>GEM</label>
                </value>
                <value>
                    <fullName>Invoice Retailer</fullName>
                    <isActive>false</isActive>
                    <label>Invoice Retailer</label>
                </value>
                <value>
                    <fullName>Sales Discretionary</fullName>
                    <isActive>false</isActive>
                    <label>Sales Discretionary</label>
                </value>
                <value>
                    <fullName>storecredit</fullName>
                    <isActive>false</isActive>
                    <label>Store Credit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Cost__c</fullName>
        <label>Expense Cost</label>
        <summarizedField>Expense__c.Cost__c</summarizedField>
        <summaryForeignKey>Expense__c.Project_Group_MD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Tax_Subtotal__c</fullName>
        <label>Subtotal Excluding Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Cost__c</fullName>
        <label>Final Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Certificate_Amount__c</fullName>
        <label>Gift Certificate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoicing_Code__c</fullName>
        <label>Invoicing Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Designate_Payment_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>555747.640101.27</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Isassignto_loggedinuser__c</fullName>
        <formula>If(Assigned_To__c = $User.Id,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Isassignto loggedinuser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Part_Number__c</fullName>
        <label>Manufacturer Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_comments_to_invoicing__c</fullName>
        <label>Marketing comments to invoicing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIS_Customer_Account_Number__c</fullName>
        <formula>Account__r.NIS_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NIS Customer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Address_Id__c</fullName>
        <label>Order Address Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Contact_Info__c</fullName>
        <label>Order Contact Info</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Contact__c</fullName>
        <label>Order Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Is_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Is Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <label>Order Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pcard_expense__c</fullName>
        <label>Pcard expense?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plant_location__c</fullName>
        <formula>TEXT(Account__r.Default_Cargill_Plant__c)</formula>
        <label>Plant location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Delivery_Date__c</fullName>
        <label>Project Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Company__c</fullName>
        <label>Shipping Company</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Country_ISO__c</fullName>
        <inlineHelpText>“This field will be populated from a Big Commerce order if available.”</inlineHelpText>
        <label>Shipping Country ISO</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_First_Name__c</fullName>
        <label>Shipping First Name</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Last_Name__c</fullName>
        <label>Shipping Last Name</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Phone__c</fullName>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_1__c</fullName>
        <label>Shipping Street 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_2__c</fullName>
        <label>Shipping Street 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Notes__c</fullName>
        <label>Staff Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Shipping State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>PG Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Delivered (Invoicing)</fullName>
                </value>
                <value>
                    <fullName>Billing Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Work Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_Credit_Amount__c</fullName>
        <label>Store Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Including_Tax__c</fullName>
        <label>Total Including Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total  Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X9_Box_Step_2__c</fullName>
        <formula>Text (Account__r.X9_Box_Step_2__c)</formula>
        <label>9-Box (Step 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Shipping Zip</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Project Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project_Delivery_Date__c</columns>
        <columns>Sales_Consultant_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All  Project Groups</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Billing_Complete_Project_Groups</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>Project_Delivery_Date__c</columns>
        <columns>Sales_Consultant_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billing Complete</value>
        </filters>
        <label>Billing Complete Project Groups</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_Project_Groups</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>Project_Delivery_Date__c</columns>
        <columns>Sales_Consultant_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Project Groups</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Project_Groups_Assigned_to_Me</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Plant_location__c</columns>
        <columns>Project_Delivery_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Isassignto_loggedinuser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Billing Complete,Cancelled,Work Complete</value>
        </filters>
        <label>Closed Project Groups Assigned to Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Delayed_Project_Groups</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>Project_Delivery_Date__c</columns>
        <columns>Sales_Consultant_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Delayed</value>
        </filters>
        <label>Delayed Project Groups</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Progress_Project_Groups</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>Project_Delivery_Date__c</columns>
        <columns>Sales_Consultant_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress Project Groups</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Project_Groups</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Plant_location__c</columns>
        <columns>Project_Delivery_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Project Groups</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Started_Project_Groups</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Customer_Contact__c</columns>
        <columns>Project_Delivery_Date__c</columns>
        <columns>Sales_Consultant_New__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>Not Started Project Groups</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
</CustomObject>